# tree-sitter-lpc

./: .gitignore  BUGS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  binding.gyp  flake.nix  go.mod  grammar.js  grammar.md  limitations.md  package.json  pyproject.toml  setup.py  shell.nix  test.c  test2.c  tree-sitter-LPC.wasm  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-lpc.pc.in
bindings/c/tree_sitter/: tree-sitter-lpc.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
scripts/: ldmud-excludes.txt  smoke-ldmud.sh  smoke-parse.sh
src/: grammar.json  node-types.json  parser.c
test/: char_literals.broken.test.txt  inline_function.todo  symbol.broken.txt
test/corpus/: array_literal.txt  array_literal2.txt  assignment_test.txt  binary_expressions.txt  bracket_pointer_typed_function.txt  bracket_typed_function.txt  bytes_literals.txt  call_other.txt  cast_expression.txt  catch_modifiers.txt  char_literals.txt  closure.txt  complex_default_visibility.txt  complex_for_loop.txt  complex_for_loop2.txt  complex_inherit.txt  complex_inline_closures.txt  conditional_globals.txt  coroutine_call.txt  decl_cast_expression.txt  do_while_loop.txt  empty_array_literal.txt  empty_for_loop.txt  empty_mapping.txt  empty_struct.txt  escape_sequences.txt  for_init_multi_type.txt  for_loop.txt  foreach_loop.txt  foreach_loop2.txt  foreach_ranges.txt  function_default_arg.txt  function_default_args.txt  function_locals.txt  function_preproc_ifdef.txt  globals_commas.txt  globals_commas_init.txt  if_with_catch.txt  index_assignment.txt  index_expr.txt  (+91 more)
(+3 files in other folders)
